; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/xd75/keymaps/odyssey/extr_keymap.c_lesc_reset.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/xd75/keymaps/odyssey/extr_keymap.c_lesc_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@td_state = common dso_local global i32 0, align 4
@KC_ESC = common dso_local global i32 0, align 4
@_FN = common dso_local global i32 0, align 4
@sstate = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lesc_reset(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @td_state, align 4
  switch i32 %5, label %22 [
    i32 128, label %6
    i32 129, label %9
    i32 131, label %20
    i32 130, label %21
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* @KC_ESC, align 4
  %8 = call i32 @unregister_code16(i32 %7)
  br label %22

9:                                                ; preds = %2
  %10 = load i32, i32* @_FN, align 4
  %11 = call i32 @layer_off(i32 %10)
  %12 = load i32, i32* @sstate, align 4
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %19

14:                                               ; preds = %9
  %15 = load i32, i32* @KC_ESC, align 4
  %16 = call i32 @register_code16(i32 %15)
  %17 = load i32, i32* @KC_ESC, align 4
  %18 = call i32 @unregister_code16(i32 %17)
  br label %19

19:                                               ; preds = %14, %9
  br label %22

20:                                               ; preds = %2
  br label %22

21:                                               ; preds = %2
  br label %22

22:                                               ; preds = %2, %21, %20, %19, %6
  store i32 130, i32* @td_state, align 4
  %23 = call i32 (...) @update_led_state_c()
  ret void
}

declare dso_local i32 @unregister_code16(i32) #1

declare dso_local i32 @layer_off(i32) #1

declare dso_local i32 @register_code16(i32) #1

declare dso_local i32 @update_led_state_c(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
